# markov

./: .gitignore  Cargo.toml  rustfmt.toml
src/: main.rs  markov.rs
