[package]
name = "markov"
version = "0.1.0"
authors = ["th0rex <c0untlizzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markov = { branch = "stable", git = "https://github.com/th0rex/markov_rs.git" }
serenity = { version = "0.7", features = [ "cache", "client", "gateway", "http", "model", "utils", "native_tls_backend" ] }
